--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     </script>
 
     <link rel="manifest" href="/manifest.json">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
